--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
