--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.3.0",
     "firebase": "^10.0.0",
     "iframe-resizer": "^4.3.6",
     "iframe-resizer-react": "^1.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-collapsed": "^4.0.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
